added section on workload generator

--- a/doc/codes-best-practices.tex
+++ b/doc/codes-best-practices.tex
@@ -317,6 +317,16 @@ file per LP.
 
 TODO: look at ross/IO code and determine how it relates to this.
 
+\subsection{codes-workload generator}
+
+TODO: fill this in.  codes-workload is an abstraction layer for feeding I/O
+workloads into a simulation.  It supports multiple back-ends for generating
+those I/O events; data could come from a trace file, from Darshan, or from a
+synthetic description.
+
+This component is under active development right now, not complete yet.  The
+synthetic generator is probably pretty solid for use already though.
+
 \subsection{codes\_event\_new}
 
 TODO: fill this in.  codes\_event\_new is a small wrapper to tw\_event\_new
