a note about kickoff events

--- a/doc/codes-best-practices.tex
+++ b/doc/codes-best-practices.tex
@@ -413,6 +413,12 @@ when you have completed a particular application workload (or collection of
 application workloads), when a fault has been repaired, etc.  Talk about how
 to handle this cleanly.
 
+\subsection{Kicking off a simulation}
+
+TOOD: fill this in.  Each LP needs to send an event to itself at the
+beginning of the simulation (explain why).  We usually skew these with
+random numbers to help break ties right off the bat (explain why).
+
 \section{TODO}
 
 \begin{itemize}
