--- a/src/cortex/README
+++ b/src/cortex/README
@@ -33,6 +33,16 @@ and
 
 network-workloads/cortex-conf/allocation-12K-job.conf
 
+* Turning on synthetic traffic
+
+- Use runtime option --generate_synthetic = 1
+- The allocation file must have a second job with ranks that are not
+  participating in the collective operation. The synthetic traffic pattern will
+  run on those remainder ranks.
+- By default, we are generating synthetic traffic roughly on the pattern of 
+  hpcg miniapp data provided by NERSC. Each rank generates 11 MB of data per
+  second. We are currently simulating 2.5 MB of data
+  transfer in 0.25 seconds of simulated time.
 -------------- Example test program -----------------
 ./src/network-workloads/model-net-dumpi-traces-dump --sync=1
 --workload_type="cortex-workload"
