--- a/scripts/allocation_gen/README
+++ b/scripts/allocation_gen/README
@@ -19,4 +19,5 @@ configuration file (Example in config_alloc-upd) will then look like:
 1st line: allocation policy, must be rand
 2nd line: the total terminal number of nodes in the system
 3rd line: the number of random allocations to generate
-4th line: number of ranks for each application.]
+4th line: the number of cores per node 
+5th line: number of ranks for each application.]
